<resources>
    <string name="app_name">Blois : Learn to Listen</string>
    <string name="action_settings">People interacting with the project Blois : Savoir Écouter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addUserPhoto">Add New User Image</string>
    <string name="addPhoto">Add Photo !</string>
    <string name="takePhoto">Take photo from camera</string>
    <string name="choosePhotoGallery">Choose from gallery</string>
    <string name="name">Name</string>
    <string name="about_you">About you…</string>
    <string name="user_image">User Image</string>
    <string name="namelabel">label name edit box</string>
    <string name="aboutlabel">label about you edit box</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_about">about project</string>
    <string name="aboutParagraph2">Blois : Savoir Écouter est un projet hybride. La structure de bois et papier est réelle, la tablette tactile est intégrée et les applications mobiles fournies sont numériques. Dans cette œuvre participative, les Blésois peuvent ajouter au contenu du projet soit un dessin, soit une histoire écrite à la main, soit des contenus numériques (sons, images ou vidéos).</string>
    <string name="about1Description">People interacting with the project Blois : Savoir Écouter</string>
    <string name="about2Description">detailed view of the sculpture Blois : Savoir Écouter</string>
    <string name="linkProject" translatable="false"><a href="http://http://blois.odeurdelacouleur.info">http://blois.odeurdelacouleur.info</a></string>
    <string name="title_activity_thanks">Our Thanks</string>
    <string name="title_activity_artist">About the Artist</string>
    <string name="title_activity_people">People of Blois</string>
    <string name="title_activity_legende">LegendeActivity</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_activity_sound_list">SoundLIstActivity</string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="title_activity_sector_sounds">SectorSoundsActivity</string>
    <string name="aboutDescription">About Project</string>
    <string name="thanksDescription">sound data</string>
    <string name="case1_Description" translatable="false">Sector 1</string>
    <string name="case2_Description" translatable="false">Sector 2</string>
    <string name="users_Description">people of Blois</string>
    <string name="case3_Description" translatable="false">Sector 3</string>
    <string name="case4_Description" translatable="false">Sector 4</string>
    <string name="case5_Description" translatable="false">Sector 5</string>
    <string name="case6_Description" translatable="false">Sector 6</string>
    <string name="case7_Description" translatable="false">Sector 7</string>
    <string name="case8_Description" translatable="false">Sector 8</string>
    <string name="case9_Description" translatable="false">Sector 9</string>
    <string name="case10_Description">Application Tour</string>
    <string name="case11_Description" translatable="false">Sector 11</string>
    <string name="case12_Description" translatable="false">Sector 12</string>
    <string name="case13_Description" translatable="false">Sector 13</string>
    <string name="case14_Description" translatable="false">Sector 14</string>
    <string name="case15_Description" translatable="false">Sector 15</string>
    <string name="legend_Description">The legend of map</string>
    <string name="application_Description">The application itself</string>
    <string name="aboutParagraph1">Ce projet est né du désir de comprendre l’espace urbain dans un contexte sculptural. Mon objet est de créer un travail qui est un stimulant de l’engagement personnel avec l’espace urbain et des logiques socio-spatiales des individus et des communautés qu’ils composent. La démarche que j’ai adoptée pour réaliser l’oeuvre s’intègre dans une logique de long terme,
    dans la mesure où je souhaite cibler une grande variété de publics.</string>
    <string name="sound_image">Take photo from camera</string>
    <string name="aboutsoundlabel">Sound description</string>
    <string name="quadrantNum">This must change</string>
    <string name="number_of_sounds">- Practical information;</string>
    <string name="title_activity_add_location_maps">Add Location</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="title_activity_zdetail_sound">Blois : Learn to Listen</string>
    <string name="title_activity_add_location">AddLocationActivity</string>
    <string name="title_activity_people_detail">PeopleDetailActivity</string>
    <string name="sharing">Sharing</string>
    <string name="emailText">I would like to share this sound and I have read and understand the privacy policy of this application.</string>
    <string name="soundData">sound data</string>
    <string name="userData">User Data</string>
    <string name="locData">Location Data</string>
    <string name="search_hint">search…</string>
    <string name="record">Record</string>
    <string name="add_place_information">Add Place Information</string>
    <string name="finish_recording">Finish Recording</string>
    <string name="place_name">place name</string>
    <string name="place_address">Place Address</string>
    <string name="longitude_and_latitude">Longitude and Latitude</string>
    <string name="title_activity_add_sound2">Add Sound</string>
    <string name="describe_the_sound">describe the sound…</string>
    <string name="title_activity_privacy">privacy settings</string>
    <string name="title_activity_search_sounds">SearchSoundsActivity</string>
    <string name="title_activity_walks">WalksActivity</string>
    <string name="project_map_of_blois">Project Map of Blois</string>
    <string name="search_by_keyword">Search by Keyword</string>
    <string name="explore_by_geocoding">Explore by Geocoding</string>
    <string name="explore_by_people">Explore by People</string>
    <string name="explore_walking_tous">Explore Walking Tous</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="share_your_sound">Share your sound</string>
    <string name="this_primary_user">This sound was recorded by</string>
    <string name="play_sound">play</string>
    <string name="detail_map_of_blois">detail : map of Blois</string>
    <string name="see_more_about_this_user">See more about this user</string>
    <string name="this_sound_was_recorded_by">This sound was recorded by</string>
    <string name="user_name">User Name</string>
    <string name="user_details">User details</string>
    <string name="record_button">record button</string>
    <string name="application_tour">Application Tour</string>
    <string name="click_for_more_details_about_sound">click for more details about sound</string>
    <string name="setting_and_privacy">Setting and Privacy</string>
    <string name="LongLat">LongLat</string>
    <string name="more_about_this_user">more about this user</string>
    <string name="get_new_place_from_map">Get New Place From Map</string>
    <string name="place_id">Place ID</string>
    <string name="connect_this_place_to_a_sound">Connect this place to a sound</string>
    <string name="attribution">Attribution</string>
    <string name="powered_by_google">powered by google</string>
    <string name="images_of_project">images of project</string>
    <string name="user">user</string>
    <string name="people_using_the_application">people using the application</string>
    <string name="mobile_application_terms_and_conditions">Mobile Application Terms and Conditions</string>
    <string name="i_have_read_and_understand_the_condition_of_use">I have read and understand the condition of use</string>
    <string name="privacyparagraph2">By installing the Application on your terminal and / or by accessing the Application, as a visitor and / or user, you accept unconditionally and without reservation the entire UGS defined hereafter. If you do not wish to accept these Terms, we request that you do not access the Application. Any visit and / or use of the Application must be done in compliance with these GTC.</string>
    <string name="subhead1">Article 1. DEFINITIONS</string>
    <string name="paragraph3">Terms beginning with a capital letter within these Terms, whether used singly or in the plural, shall have the meanings given to them below:</string>
    <string name="please_read_text">Please Read Text</string>
    <string name="no">no</string>
    <string name="please_read_the_condtions_of_use_agreement">I do not agree or have not read the terms of use</string>
    <string name="i_have_read_and_understand_condtions_of_use_agreement">I have read and understand Conditions of Use Agreement</string>
    <string name="privacyparagraph4">\"Application\" means the software application \"Blois: Listening\" published and provided by the Artist, providing access to the Services, which is available free of charge from Apple\'s \"Apple Store\" and Google\'s \"Google Play Store\" to be downloaded by the User on his terminal Apple iOS and Android. The Application also includes Content, software, programs, tools (programming, navigation, …), databases, operating systems, documentation and all other elements and services of which it is composed, updates and new versions that can be made to the Application by the Artist.</string>
    <string name="privacysubhead2">Article 2. PURPOSE OF THE APPLICATION</string>
    <string name="privacyparagraph5">\"Content\" means, without limitation, the structure of the Application, editorial content, drawings, illustrations, images, photographs, graphic charts, trademarks, logos, acronyms , audiovisual works, multimedia works, visual content, audio and sound content, and any other content within the Application and / or any other component of the Application.</string>
    <string name="privacyparagraph6">\"Services\" refers to the various features and services offered by the Application.</string>
    <string name="privacyparagraph7">\"Site\" means the official website of the Blois: Learn to Listen whose address is the following: www.savoir-ecouter.aprille.net</string>
    <string name="thanks_par1">The artist would like to thank the city of Blois, the Caisse des Depots and the association Odeur de la Color for their technical and financial support. In addition, she would like to a special thanks the project\'s institutional partners (ALCV, the APF, the hospital center of Blois, the Espace Mirabeau, the Espace Quinière, FabLab Robert-Houdin, Lycée horticole public de Blois, the Maison des Provinces, the Médiathèque Maurice-Genevoix, the Observatoire Loire, EHPAD La Roselière and Association Valentin Haüy)</string>
    <string name="thanks_par2">Finally, the artist would like to thank the hundreds of residents of Blois who generously gave the time and creativity to make this project a success.</string>
    <string name="thanks_par3">The website is www.blois.odeurdelacouleur.info.  This project is made possible by the support of la Caisse des Dépôts, http://www.caissedesdepots.fr</string>
    <string name="logo_ville">logo of city of Blois</string>
    <string name="logo_of_caisse_des_depots">Logo of Caisse des Depots</string>
    <string name="logo_of_the_association_odeur_de_la_couleur">logo of the association Odeur de la Couleur</string>
    <string name="add_sound">Add Sound</string>
    <string name="logos_of_partner_organization">logos of partner organization</string>
    <string name="distance">distance :</string>
    <string name="walk_name">Walk Name</string>
    <string name="walk_description">Walk description</string>
</resources>