<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.aprille.bloissavoirecouter.ThankYouActivity"
    tools:showIn="@layout/activity_thank_you">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        >


    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeftThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMiddleThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <android.support.constraint.Guideline
        android:id="@+id/guidelineRightthanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"/>


    <TextView
        android:id="@+id/textViewP1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageViewVille"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        android:text="@string/thanks_par1"
        />

    <TextView
        android:id="@+id/textViewP2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTogether"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:text="@string/thanks_par2"
        />
    <TextView
        android:id="@+id/textViewP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewP2"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_marginTop="5dp"
        android:text="@string/thanks_par3"
        />


    <ImageView
        android:id="@+id/imageViewVille"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_ville"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineMiddleThanks"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ville_blois"
        />

    <ImageView
        android:id="@+id/imageViewCaisse"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guidelineMiddleThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_of_caisse_des_depots"
        app:srcCompat="@drawable/logo_groupe_caisse_des_depots"
        />

    <ImageView
        android:id="@+id/imageViewTogether"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logos_of_partner_organization"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        app:layout_constraintTop_toBottomOf="@+id/textViewP1"
        app:srcCompat="@drawable/logos_together"
        />

    <ImageView
        android:id="@+id/imageOdlc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_of_the_association_odeur_de_la_couleur"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftThanks"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightthanks"
        app:layout_constraintTop_toBottomOf="@+id/textViewP3"
        app:srcCompat="@drawable/l_odeur_de_la_couleur_logo"
        />


</android.support.constraint.ConstraintLayout>

    </ScrollView>
