<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.aprille.bloissavoirecouter.WalkDetailActivity"
    tools:showIn="@layout/activity_walk_detail">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeftWalkD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRightWalkD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopWalkD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMiddleVWalkD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomWalkD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="10dp" />

    <ImageView
        android:id="@+id/walkImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopWalkD"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftWalkD"
        app:layout_constraintRight_toLeftOf="@+id/walkName"
        app:layout_constraintBottom_toTopOf="@+id/users_realm_recycler_view"
        android:layout_marginBottom="6dp"
        app:srcCompat="@drawable/plan_title"
        android:onClick="buttonClickPrimary"
        />

    <TextView
        android:id="@+id/walkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:gravity="left"
        android:text="@string/walk_name"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/walkImageView"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRightWalkD"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopWalkD"
        />

    <TextView
        android:id="@+id/walkDescr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/walk_description"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@+id/walkImageView"
        app:layout_constraintBottom_toTopOf="@+id/numSoundPrimaryTextView"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightWalkD"
        app:layout_constraintTop_toBottomOf="@+id/primaryUserName"
        />

    <TextView
        android:id="@+id/walkDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/distance"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@+id/walkImageView"
        app:layout_constraintBottom_toTopOf="@+id/numSoundPrimaryTextView"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightWalkD"
        app:layout_constraintTop_toBottomOf="@+id/primaryUserName"
        />
    <TextView
        android:id="@+id/walkinfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="time"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@+id/walkImageView"
        app:layout_constraintBottom_toTopOf="@+id/numSoundPrimaryTextView"
        app:layout_constraintRight_toRightOf="@+id/guidelineRightWalkD"
        app:layout_constraintTop_toBottomOf="@+id/primaryUserName"
        />




    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonPrivacy"
        android:textOff="loop"
        android:textOn="one way"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        />

</android.support.constraint.ConstraintLayout>
